// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app/MenuButtons renders the MenuButtons buttons 1`] = `
Array [
  <div
    class="menuButtonsOpenMetaInfoButtonBox"
  >
    <div
      class="menuButtonsOpenMetaInfoButtonLabel"
    >
      <span
        class="menuButtonsOpenMetaInfoButtonLabelOverflow"
      >
        Firefox (48.0) Intel Mac OS X 10.11
      </span>
    </div>
    <div
      class="buttonWithPanel menuButtonsOpenMetaInfoButtonButton"
    >
      <div
        class="buttonWithPanelButtonWrapper"
      >
        <input
          class="buttonWithPanelButton menuButtonsOpenMetaInfoButtonButtonButton"
          type="button"
          value=" "
        />
      </div>
      <div
        class="arrowPanelAnchor"
      >
        <div
          class="arrowPanel arrowPanelOpenMetaInfo"
        >
          <div
            class="arrowPanelArrow"
          />
          <div
            class="arrowPanelContent"
          >
            <h2
              class="arrowPanelSubTitle"
            >
              Timing
            </h2>
            <div
              class="arrowPanelSection"
            >
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  Recording started:
                </span>
                Sat, 09 Apr 2016 17:02:32 GMT
              </div>
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  Interval:
                </span>
                1
                ms
              </div>
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  Profile Version:
                </span>
                19
              </div>
            </div>
            <h2
              class="arrowPanelSubTitle"
            >
              Application
            </h2>
            <div
              class="arrowPanelSection"
            >
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  Name:
                </span>
                Firefox
              </div>
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  Version:
                </span>
                48.0
              </div>
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  Extensions:
                </span>
                <ul
                  class="metaInfoList"
                />
              </div>
            </div>
            <h2
              class="arrowPanelSubTitle"
            >
              Platform
            </h2>
            <div
              class="arrowPanelSection"
            >
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  Platform:
                </span>
                Macintosh
              </div>
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  OS:
                </span>
                Intel Mac OS X 10.11
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="menuButtons"
  >
    <div
      class="menuButtonsCompositeButtonContainer currentButtonIsShareButton"
    >
      <div
        class="buttonWithPanel menuButtonsShareButton"
      >
        <div
          class="buttonWithPanelButtonWrapper"
        >
          <input
            class="buttonWithPanelButton menuButtonsShareButtonButton"
            disabled=""
            type="button"
            value="Sharing will be enabled once symbolication is complete"
          />
        </div>
        <div
          class="arrowPanelAnchor"
        >
          <div
            class="arrowPanel hasTitle hasButtons menuButtonsPrivacyPanel"
          >
            <div
              class="arrowPanelArrow"
            />
            <h1
              class="arrowPanelTitle"
            >
              Upload Profile – Privacy Notice
            </h1>
            <div
              class="arrowPanelContent"
            >
              <section
                class="privacyNotice"
              >
                <p>
                  You’re about to upload your profile publicly where anyone will be able to access it. To better diagnose performance problems profiles include the following information:
                </p>
                <ul>
                  <li>
                    The URLs of all painted tabs, and running scripts.
                  </li>
                  <li>
                    The metadata of all your add-ons to identify slow add-ons.
                  </li>
                  <li>
                    Firefox build and runtime configuration.
                  </li>
                </ul>
                <p>
                  To view all the information you can download the full profile to a file and open the json structure with a text editor.
                </p>
                <p>
                  By default, the URLs of all network requests will be removed while sharing the profile
        but keeping the URLs may help to identify the problems. Please select the checkbox
        below to share the URLs of the network requests:
                </p>
              </section>
              <p
                class="menuButtonsShareNetworkUrlsContainer"
              >
                <label>
                  <input
                    class="menuButtonsShareNetworkUrlsCheckbox"
                    type="checkbox"
                    value="on"
                  />
                  Share the URLs of all network requests
                </label>
              </p>
            </div>
            <div
              class="arrowPanelButtons"
            >
              <input
                class="arrowPanelCancelButton"
                type="button"
                value="Cancel"
              />
              <input
                class="arrowPanelOkButton"
                type="button"
                value="Share"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="buttonWithPanel menuButtonsProfileDownloadButton"
    >
      <div
        class="buttonWithPanelButtonWrapper"
      >
        <input
          class="buttonWithPanelButton menuButtonsProfileDownloadButtonButton"
          type="button"
          value="Save as file…"
        />
      </div>
      <div
        class="arrowPanelAnchor"
      >
        <div
          class="arrowPanel hasTitle menuButtonsProfileDownloadPanel"
        >
          <div
            class="arrowPanelArrow"
          />
          <h1
            class="arrowPanelTitle"
          >
            Save Profile to a Local File
          </h1>
          <div
            class="arrowPanelContent"
          >
            <section />
          </div>
        </div>
      </div>
    </div>
    <a
      class="menuButtonsLink"
      href="/docs/"
      target="_blank"
      title="Open the documentation in a new window"
    >
      Docs…
    </a>
  </div>,
]
`;

exports[`app/MenuButtons renders the MenuButtons buttons 2`] = `
Array [
  <div
    class="menuButtonsOpenMetaInfoButtonBox"
  >
    <div
      class="menuButtonsOpenMetaInfoButtonLabel"
    >
      <span
        class="menuButtonsOpenMetaInfoButtonLabelOverflow"
      >
        Firefox (48.0) Intel Mac OS X 10.11
      </span>
    </div>
    <div
      class="buttonWithPanel menuButtonsOpenMetaInfoButtonButton"
    >
      <div
        class="buttonWithPanelButtonWrapper"
      >
        <input
          class="buttonWithPanelButton menuButtonsOpenMetaInfoButtonButtonButton"
          type="button"
          value=" "
        />
      </div>
      <div
        class="arrowPanelAnchor"
      >
        <div
          class="arrowPanel arrowPanelOpenMetaInfo"
        >
          <div
            class="arrowPanelArrow"
          />
          <div
            class="arrowPanelContent"
          >
            <h2
              class="arrowPanelSubTitle"
            >
              Timing
            </h2>
            <div
              class="arrowPanelSection"
            >
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  Recording started:
                </span>
                Sat, 09 Apr 2016 17:02:32 GMT
              </div>
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  Interval:
                </span>
                1
                ms
              </div>
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  Profile Version:
                </span>
                19
              </div>
            </div>
            <h2
              class="arrowPanelSubTitle"
            >
              Application
            </h2>
            <div
              class="arrowPanelSection"
            >
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  Name:
                </span>
                Firefox
              </div>
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  Version:
                </span>
                48.0
              </div>
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  Extensions:
                </span>
                <ul
                  class="metaInfoList"
                />
              </div>
            </div>
            <h2
              class="arrowPanelSubTitle"
            >
              Platform
            </h2>
            <div
              class="arrowPanelSection"
            >
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  Platform:
                </span>
                Macintosh
              </div>
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  OS:
                </span>
                Intel Mac OS X 10.11
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="menuButtons"
  >
    <div
      class="menuButtonsCompositeButtonContainer currentButtonIsShareButton"
    >
      <div
        class="buttonWithPanel menuButtonsShareButton"
      >
        <div
          class="buttonWithPanelButtonWrapper"
        >
          <input
            class="buttonWithPanelButton menuButtonsShareButtonButton"
            type="button"
            value="Share..."
          />
        </div>
        <div
          class="arrowPanelAnchor"
        >
          <div
            class="arrowPanel hasTitle hasButtons menuButtonsPrivacyPanel"
          >
            <div
              class="arrowPanelArrow"
            />
            <h1
              class="arrowPanelTitle"
            >
              Upload Profile – Privacy Notice
            </h1>
            <div
              class="arrowPanelContent"
            >
              <section
                class="privacyNotice"
              >
                <p>
                  You’re about to upload your profile publicly where anyone will be able to access it. To better diagnose performance problems profiles include the following information:
                </p>
                <ul>
                  <li>
                    The URLs of all painted tabs, and running scripts.
                  </li>
                  <li>
                    The metadata of all your add-ons to identify slow add-ons.
                  </li>
                  <li>
                    Firefox build and runtime configuration.
                  </li>
                </ul>
                <p>
                  To view all the information you can download the full profile to a file and open the json structure with a text editor.
                </p>
                <p>
                  By default, the URLs of all network requests will be removed while sharing the profile
        but keeping the URLs may help to identify the problems. Please select the checkbox
        below to share the URLs of the network requests:
                </p>
              </section>
              <p
                class="menuButtonsShareNetworkUrlsContainer"
              >
                <label>
                  <input
                    class="menuButtonsShareNetworkUrlsCheckbox"
                    type="checkbox"
                    value="on"
                  />
                  Share the URLs of all network requests
                </label>
              </p>
            </div>
            <div
              class="arrowPanelButtons"
            >
              <input
                class="arrowPanelCancelButton"
                type="button"
                value="Cancel"
              />
              <input
                class="arrowPanelOkButton"
                type="button"
                value="Share"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="buttonWithPanel menuButtonsProfileDownloadButton"
    >
      <div
        class="buttonWithPanelButtonWrapper"
      >
        <input
          class="buttonWithPanelButton menuButtonsProfileDownloadButtonButton"
          type="button"
          value="Save as file…"
        />
      </div>
      <div
        class="arrowPanelAnchor"
      >
        <div
          class="arrowPanel hasTitle menuButtonsProfileDownloadPanel"
        >
          <div
            class="arrowPanelArrow"
          />
          <h1
            class="arrowPanelTitle"
          >
            Save Profile to a Local File
          </h1>
          <div
            class="arrowPanelContent"
          >
            <section />
          </div>
        </div>
      </div>
    </div>
    <a
      class="menuButtonsLink"
      href="/docs/"
      target="_blank"
      title="Open the documentation in a new window"
    >
      Docs…
    </a>
  </div>,
]
`;

exports[`app/MenuButtons renders the MenuButtons buttons with profile.meta.networkURLsRemoved set to true 1`] = `
Array [
  <div
    class="menuButtonsOpenMetaInfoButtonBox"
  >
    <div
      class="menuButtonsOpenMetaInfoButtonLabel"
    >
      <span
        class="menuButtonsOpenMetaInfoButtonLabelOverflow"
      >
        Firefox (48.0) Intel Mac OS X 10.11
      </span>
    </div>
    <div
      class="buttonWithPanel menuButtonsOpenMetaInfoButtonButton"
    >
      <div
        class="buttonWithPanelButtonWrapper"
      >
        <input
          class="buttonWithPanelButton menuButtonsOpenMetaInfoButtonButtonButton"
          type="button"
          value=" "
        />
      </div>
      <div
        class="arrowPanelAnchor"
      >
        <div
          class="arrowPanel arrowPanelOpenMetaInfo"
        >
          <div
            class="arrowPanelArrow"
          />
          <div
            class="arrowPanelContent"
          >
            <h2
              class="arrowPanelSubTitle"
            >
              Timing
            </h2>
            <div
              class="arrowPanelSection"
            >
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  Recording started:
                </span>
                Sat, 09 Apr 2016 17:02:32 GMT
              </div>
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  Interval:
                </span>
                1
                ms
              </div>
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  Profile Version:
                </span>
                19
              </div>
            </div>
            <h2
              class="arrowPanelSubTitle"
            >
              Application
            </h2>
            <div
              class="arrowPanelSection"
            >
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  Name:
                </span>
                Firefox
              </div>
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  Version:
                </span>
                48.0
              </div>
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  Extensions:
                </span>
                <ul
                  class="metaInfoList"
                />
              </div>
            </div>
            <h2
              class="arrowPanelSubTitle"
            >
              Platform
            </h2>
            <div
              class="arrowPanelSection"
            >
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  Platform:
                </span>
                Macintosh
              </div>
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  OS:
                </span>
                Intel Mac OS X 10.11
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="menuButtons"
  >
    <div
      class="menuButtonsCompositeButtonContainer currentButtonIsShareButton"
    >
      <div
        class="buttonWithPanel menuButtonsShareButton"
      >
        <div
          class="buttonWithPanelButtonWrapper"
        >
          <input
            class="buttonWithPanelButton menuButtonsShareButtonButton"
            disabled=""
            type="button"
            value="Sharing will be enabled once symbolication is complete"
          />
        </div>
        <div
          class="arrowPanelAnchor"
        >
          <div
            class="arrowPanel hasTitle hasButtons menuButtonsPrivacyPanel"
          >
            <div
              class="arrowPanelArrow"
            />
            <h1
              class="arrowPanelTitle"
            >
              Upload Profile – Privacy Notice
            </h1>
            <div
              class="arrowPanelContent"
            >
              <section
                class="privacyNotice"
              >
                <p>
                  You’re about to upload your profile publicly where anyone will be able to access it. To better diagnose performance problems profiles include the following information:
                </p>
                <ul>
                  <li>
                    The URLs of all painted tabs, and running scripts.
                  </li>
                  <li>
                    The metadata of all your add-ons to identify slow add-ons.
                  </li>
                  <li>
                    Firefox build and runtime configuration.
                  </li>
                </ul>
                <p>
                  To view all the information you can download the full profile to a file and open the json structure with a text editor.
                </p>
                <p>
                  By default, the URLs of all network requests will be removed while sharing the profile
        but keeping the URLs may help to identify the problems. Please select the checkbox
        below to share the URLs of the network requests:
                </p>
              </section>
              <p
                class="menuButtonsShareNetworkUrlsContainer"
              >
                <label>
                  <input
                    class="menuButtonsShareNetworkUrlsCheckbox"
                    type="checkbox"
                    value="on"
                  />
                  Share the URLs of all network requests
                </label>
              </p>
            </div>
            <div
              class="arrowPanelButtons"
            >
              <input
                class="arrowPanelCancelButton"
                type="button"
                value="Cancel"
              />
              <input
                class="arrowPanelOkButton"
                type="button"
                value="Share"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="buttonWithPanel menuButtonsProfileDownloadButton"
    >
      <div
        class="buttonWithPanelButtonWrapper"
      >
        <input
          class="buttonWithPanelButton menuButtonsProfileDownloadButtonButton"
          type="button"
          value="Save as file…"
        />
      </div>
      <div
        class="arrowPanelAnchor"
      >
        <div
          class="arrowPanel hasTitle menuButtonsProfileDownloadPanel"
        >
          <div
            class="arrowPanelArrow"
          />
          <h1
            class="arrowPanelTitle"
          >
            Save Profile to a Local File
          </h1>
          <div
            class="arrowPanelContent"
          >
            <section />
          </div>
        </div>
      </div>
    </div>
    <a
      class="menuButtonsLink"
      href="/docs/"
      target="_blank"
      title="Open the documentation in a new window"
    >
      Docs…
    </a>
  </div>,
]
`;

exports[`app/MenuButtons renders the MenuButtons buttons with profile.meta.networkURLsRemoved set to true 2`] = `
Array [
  <div
    class="menuButtonsOpenMetaInfoButtonBox"
  >
    <div
      class="menuButtonsOpenMetaInfoButtonLabel"
    >
      <span
        class="menuButtonsOpenMetaInfoButtonLabelOverflow"
      >
        Firefox (48.0) Intel Mac OS X 10.11
      </span>
    </div>
    <div
      class="buttonWithPanel menuButtonsOpenMetaInfoButtonButton"
    >
      <div
        class="buttonWithPanelButtonWrapper"
      >
        <input
          class="buttonWithPanelButton menuButtonsOpenMetaInfoButtonButtonButton"
          type="button"
          value=" "
        />
      </div>
      <div
        class="arrowPanelAnchor"
      >
        <div
          class="arrowPanel arrowPanelOpenMetaInfo"
        >
          <div
            class="arrowPanelArrow"
          />
          <div
            class="arrowPanelContent"
          >
            <h2
              class="arrowPanelSubTitle"
            >
              Timing
            </h2>
            <div
              class="arrowPanelSection"
            >
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  Recording started:
                </span>
                Sat, 09 Apr 2016 17:02:32 GMT
              </div>
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  Interval:
                </span>
                1
                ms
              </div>
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  Profile Version:
                </span>
                19
              </div>
            </div>
            <h2
              class="arrowPanelSubTitle"
            >
              Application
            </h2>
            <div
              class="arrowPanelSection"
            >
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  Name:
                </span>
                Firefox
              </div>
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  Version:
                </span>
                48.0
              </div>
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  Extensions:
                </span>
                <ul
                  class="metaInfoList"
                />
              </div>
            </div>
            <h2
              class="arrowPanelSubTitle"
            >
              Platform
            </h2>
            <div
              class="arrowPanelSection"
            >
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  Platform:
                </span>
                Macintosh
              </div>
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  OS:
                </span>
                Intel Mac OS X 10.11
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="menuButtons"
  >
    <div
      class="menuButtonsCompositeButtonContainer currentButtonIsShareButton"
    >
      <div
        class="buttonWithPanel menuButtonsShareButton"
      >
        <div
          class="buttonWithPanelButtonWrapper"
        >
          <input
            class="buttonWithPanelButton menuButtonsShareButtonButton"
            type="button"
            value="Share..."
          />
        </div>
        <div
          class="arrowPanelAnchor"
        >
          <div
            class="arrowPanel hasTitle hasButtons menuButtonsPrivacyPanel"
          >
            <div
              class="arrowPanelArrow"
            />
            <h1
              class="arrowPanelTitle"
            >
              Upload Profile – Privacy Notice
            </h1>
            <div
              class="arrowPanelContent"
            >
              <section
                class="privacyNotice"
              >
                <p>
                  You’re about to upload your profile publicly where anyone will be able to access it. To better diagnose performance problems profiles include the following information:
                </p>
                <ul>
                  <li>
                    The URLs of all painted tabs, and running scripts.
                  </li>
                  <li>
                    The metadata of all your add-ons to identify slow add-ons.
                  </li>
                  <li>
                    Firefox build and runtime configuration.
                  </li>
                </ul>
                <p>
                  To view all the information you can download the full profile to a file and open the json structure with a text editor.
                </p>
                <p>
                  By default, the URLs of all network requests will be removed while sharing the profile
        but keeping the URLs may help to identify the problems. Please select the checkbox
        below to share the URLs of the network requests:
                </p>
              </section>
              <p
                class="menuButtonsShareNetworkUrlsContainer"
              >
                <label>
                  <input
                    class="menuButtonsShareNetworkUrlsCheckbox"
                    type="checkbox"
                    value="on"
                  />
                  Share the URLs of all network requests
                </label>
              </p>
            </div>
            <div
              class="arrowPanelButtons"
            >
              <input
                class="arrowPanelCancelButton"
                type="button"
                value="Cancel"
              />
              <input
                class="arrowPanelOkButton"
                type="button"
                value="Share"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="buttonWithPanel menuButtonsProfileDownloadButton"
    >
      <div
        class="buttonWithPanelButtonWrapper"
      >
        <input
          class="buttonWithPanelButton menuButtonsProfileDownloadButtonButton"
          type="button"
          value="Save as file…"
        />
      </div>
      <div
        class="arrowPanelAnchor"
      >
        <div
          class="arrowPanel hasTitle menuButtonsProfileDownloadPanel"
        >
          <div
            class="arrowPanelArrow"
          />
          <h1
            class="arrowPanelTitle"
          >
            Save Profile to a Local File
          </h1>
          <div
            class="arrowPanelContent"
          >
            <section />
          </div>
        </div>
      </div>
    </div>
    <a
      class="menuButtonsLink"
      href="/docs/"
      target="_blank"
      title="Open the documentation in a new window"
    >
      Docs…
    </a>
  </div>,
]
`;

exports[`app/MenuButtons renders the MenuButtons buttons with profile.meta.networkURLsRemoved set to undefined 1`] = `
Array [
  <div
    class="menuButtonsOpenMetaInfoButtonBox"
  >
    <div
      class="menuButtonsOpenMetaInfoButtonLabel"
    >
      <span
        class="menuButtonsOpenMetaInfoButtonLabelOverflow"
      >
        Firefox (48.0) Intel Mac OS X 10.11
      </span>
    </div>
    <div
      class="buttonWithPanel menuButtonsOpenMetaInfoButtonButton"
    >
      <div
        class="buttonWithPanelButtonWrapper"
      >
        <input
          class="buttonWithPanelButton menuButtonsOpenMetaInfoButtonButtonButton"
          type="button"
          value=" "
        />
      </div>
      <div
        class="arrowPanelAnchor"
      >
        <div
          class="arrowPanel arrowPanelOpenMetaInfo"
        >
          <div
            class="arrowPanelArrow"
          />
          <div
            class="arrowPanelContent"
          >
            <h2
              class="arrowPanelSubTitle"
            >
              Timing
            </h2>
            <div
              class="arrowPanelSection"
            >
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  Recording started:
                </span>
                Sat, 09 Apr 2016 17:02:32 GMT
              </div>
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  Interval:
                </span>
                1
                ms
              </div>
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  Profile Version:
                </span>
                19
              </div>
            </div>
            <h2
              class="arrowPanelSubTitle"
            >
              Application
            </h2>
            <div
              class="arrowPanelSection"
            >
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  Name:
                </span>
                Firefox
              </div>
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  Version:
                </span>
                48.0
              </div>
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  Extensions:
                </span>
                <ul
                  class="metaInfoList"
                />
              </div>
            </div>
            <h2
              class="arrowPanelSubTitle"
            >
              Platform
            </h2>
            <div
              class="arrowPanelSection"
            >
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  Platform:
                </span>
                Macintosh
              </div>
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  OS:
                </span>
                Intel Mac OS X 10.11
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="menuButtons"
  >
    <div
      class="menuButtonsCompositeButtonContainer currentButtonIsShareButton"
    >
      <div
        class="buttonWithPanel menuButtonsShareButton"
      >
        <div
          class="buttonWithPanelButtonWrapper"
        >
          <input
            class="buttonWithPanelButton menuButtonsShareButtonButton"
            disabled=""
            type="button"
            value="Sharing will be enabled once symbolication is complete"
          />
        </div>
        <div
          class="arrowPanelAnchor"
        >
          <div
            class="arrowPanel hasTitle hasButtons menuButtonsPrivacyPanel"
          >
            <div
              class="arrowPanelArrow"
            />
            <h1
              class="arrowPanelTitle"
            >
              Upload Profile – Privacy Notice
            </h1>
            <div
              class="arrowPanelContent"
            >
              <section
                class="privacyNotice"
              >
                <p>
                  You’re about to upload your profile publicly where anyone will be able to access it. To better diagnose performance problems profiles include the following information:
                </p>
                <ul>
                  <li>
                    The URLs of all painted tabs, and running scripts.
                  </li>
                  <li>
                    The metadata of all your add-ons to identify slow add-ons.
                  </li>
                  <li>
                    Firefox build and runtime configuration.
                  </li>
                </ul>
                <p>
                  To view all the information you can download the full profile to a file and open the json structure with a text editor.
                </p>
                <p>
                  By default, the URLs of all network requests will be removed while sharing the profile
        but keeping the URLs may help to identify the problems. Please select the checkbox
        below to share the URLs of the network requests:
                </p>
              </section>
              <p
                class="menuButtonsShareNetworkUrlsContainer"
              >
                <label>
                  <input
                    class="menuButtonsShareNetworkUrlsCheckbox"
                    type="checkbox"
                    value="on"
                  />
                  Share the URLs of all network requests
                </label>
              </p>
            </div>
            <div
              class="arrowPanelButtons"
            >
              <input
                class="arrowPanelCancelButton"
                type="button"
                value="Cancel"
              />
              <input
                class="arrowPanelOkButton"
                type="button"
                value="Share"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="buttonWithPanel menuButtonsProfileDownloadButton"
    >
      <div
        class="buttonWithPanelButtonWrapper"
      >
        <input
          class="buttonWithPanelButton menuButtonsProfileDownloadButtonButton"
          type="button"
          value="Save as file…"
        />
      </div>
      <div
        class="arrowPanelAnchor"
      >
        <div
          class="arrowPanel hasTitle menuButtonsProfileDownloadPanel"
        >
          <div
            class="arrowPanelArrow"
          />
          <h1
            class="arrowPanelTitle"
          >
            Save Profile to a Local File
          </h1>
          <div
            class="arrowPanelContent"
          >
            <section />
          </div>
        </div>
      </div>
    </div>
    <a
      class="menuButtonsLink"
      href="/docs/"
      target="_blank"
      title="Open the documentation in a new window"
    >
      Docs…
    </a>
  </div>,
]
`;

exports[`app/MenuButtons renders the MenuButtons buttons with profile.meta.networkURLsRemoved set to undefined 2`] = `
Array [
  <div
    class="menuButtonsOpenMetaInfoButtonBox"
  >
    <div
      class="menuButtonsOpenMetaInfoButtonLabel"
    >
      <span
        class="menuButtonsOpenMetaInfoButtonLabelOverflow"
      >
        Firefox (48.0) Intel Mac OS X 10.11
      </span>
    </div>
    <div
      class="buttonWithPanel menuButtonsOpenMetaInfoButtonButton"
    >
      <div
        class="buttonWithPanelButtonWrapper"
      >
        <input
          class="buttonWithPanelButton menuButtonsOpenMetaInfoButtonButtonButton"
          type="button"
          value=" "
        />
      </div>
      <div
        class="arrowPanelAnchor"
      >
        <div
          class="arrowPanel arrowPanelOpenMetaInfo"
        >
          <div
            class="arrowPanelArrow"
          />
          <div
            class="arrowPanelContent"
          >
            <h2
              class="arrowPanelSubTitle"
            >
              Timing
            </h2>
            <div
              class="arrowPanelSection"
            >
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  Recording started:
                </span>
                Sat, 09 Apr 2016 17:02:32 GMT
              </div>
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  Interval:
                </span>
                1
                ms
              </div>
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  Profile Version:
                </span>
                19
              </div>
            </div>
            <h2
              class="arrowPanelSubTitle"
            >
              Application
            </h2>
            <div
              class="arrowPanelSection"
            >
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  Name:
                </span>
                Firefox
              </div>
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  Version:
                </span>
                48.0
              </div>
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  Extensions:
                </span>
                <ul
                  class="metaInfoList"
                />
              </div>
            </div>
            <h2
              class="arrowPanelSubTitle"
            >
              Platform
            </h2>
            <div
              class="arrowPanelSection"
            >
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  Platform:
                </span>
                Macintosh
              </div>
              <div
                class="metaInfoRow"
              >
                <span
                  class="metaInfoLabel"
                >
                  OS:
                </span>
                Intel Mac OS X 10.11
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="menuButtons"
  >
    <div
      class="menuButtonsCompositeButtonContainer currentButtonIsShareButton"
    >
      <div
        class="buttonWithPanel menuButtonsShareButton"
      >
        <div
          class="buttonWithPanelButtonWrapper"
        >
          <input
            class="buttonWithPanelButton menuButtonsShareButtonButton"
            type="button"
            value="Share..."
          />
        </div>
        <div
          class="arrowPanelAnchor"
        >
          <div
            class="arrowPanel hasTitle hasButtons menuButtonsPrivacyPanel"
          >
            <div
              class="arrowPanelArrow"
            />
            <h1
              class="arrowPanelTitle"
            >
              Upload Profile – Privacy Notice
            </h1>
            <div
              class="arrowPanelContent"
            >
              <section
                class="privacyNotice"
              >
                <p>
                  You’re about to upload your profile publicly where anyone will be able to access it. To better diagnose performance problems profiles include the following information:
                </p>
                <ul>
                  <li>
                    The URLs of all painted tabs, and running scripts.
                  </li>
                  <li>
                    The metadata of all your add-ons to identify slow add-ons.
                  </li>
                  <li>
                    Firefox build and runtime configuration.
                  </li>
                </ul>
                <p>
                  To view all the information you can download the full profile to a file and open the json structure with a text editor.
                </p>
                <p>
                  By default, the URLs of all network requests will be removed while sharing the profile
        but keeping the URLs may help to identify the problems. Please select the checkbox
        below to share the URLs of the network requests:
                </p>
              </section>
              <p
                class="menuButtonsShareNetworkUrlsContainer"
              >
                <label>
                  <input
                    class="menuButtonsShareNetworkUrlsCheckbox"
                    type="checkbox"
                    value="on"
                  />
                  Share the URLs of all network requests
                </label>
              </p>
            </div>
            <div
              class="arrowPanelButtons"
            >
              <input
                class="arrowPanelCancelButton"
                type="button"
                value="Cancel"
              />
              <input
                class="arrowPanelOkButton"
                type="button"
                value="Share"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="buttonWithPanel menuButtonsProfileDownloadButton"
    >
      <div
        class="buttonWithPanelButtonWrapper"
      >
        <input
          class="buttonWithPanelButton menuButtonsProfileDownloadButtonButton"
          type="button"
          value="Save as file…"
        />
      </div>
      <div
        class="arrowPanelAnchor"
      >
        <div
          class="arrowPanel hasTitle menuButtonsProfileDownloadPanel"
        >
          <div
            class="arrowPanelArrow"
          />
          <h1
            class="arrowPanelTitle"
          >
            Save Profile to a Local File
          </h1>
          <div
            class="arrowPanelContent"
          >
            <section />
          </div>
        </div>
      </div>
    </div>
    <a
      class="menuButtonsLink"
      href="/docs/"
      target="_blank"
      title="Open the documentation in a new window"
    >
      Docs…
    </a>
  </div>,
]
`;
